Added memory management to startup scripts.